yaml/gateway/istio/micro-services/httpbin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: http
 namespace: default
spec:
 parentRefs:
 - name: gateway
   namespace: istio-ingress
 hostnames: ["httpbin.example.com"]
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /get
   - path:
       type: PathPrefix
       value: /headers
   backendRefs:
   - name: httpbin
     port: 8000
